--- a/openstack-services/src/main/resources/application.properties
+++ b/openstack-services/src/main/resources/application.properties
@@ -3,18 +3,35 @@ spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 
 #postgres
-spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
-spring.datasource.driver-class-name= org.postgresql.Driver
+#spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
+#spring.datasource.driver-class-name= org.postgresql.Driver
 
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+#mysql
+spring.datasource.url = ***
+spring.datasource.username = ***
+spring.datasource.password = ***
  
-spring.jpa.hibernate.ddl-auto=update
-
+# JPA Config
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+## Hibernate Properties
 
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#OpenStack Credentials
+openstack.user-name=**
+openstack.password=**
+openstack.host-url=**
+openstack.flavor=**
+openstack.network=**
 
 #mysql JPA
 
