--- a/openstack-services/src/main/resources/application.properties
+++ b/openstack-services/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mvc.view.suffix = .jsp
 #spring.datasource.password=postgres
 
 #mysql
-spring.datasource.url=jdbc:xxx/filemgr
+spring.datasource.url=XXXXX
 spring.datasource.username=system
 spring.datasource.password=Welcome123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
